--- a/apps/client/src/assets/css/auth.css
+++ b/apps/client/src/assets/css/auth.css
@@ -32,7 +32,7 @@
   }
 
   .auth-input {
-    @apply text-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 /* dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 */;
+    @apply text-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 
   }
 
   .auth-checkbox {
